tidying .a.yaml files

--- a/jamovi/brawlm.a.yaml
+++ b/jamovi/brawlm.a.yaml
@@ -39,6 +39,6 @@ options:
           title: Total
         - name: Full
           title: Full Model
-      default: Unique
+      default: Direct
 
 ...
