--- a/jamovi/brawan.a.yaml
+++ b/jamovi/brawan.a.yaml
@@ -1,6 +1,6 @@
 ---
 name:  BrawAn
-title: BrawStats:Analyze Data
+title: BrawStats:Simple Models
 menuGroup: BrawStats
 version: '1.0.0'
 jas: '1.2'
