--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -1,36 +1,55 @@
 ---
-title: Effect Size Analysis
+title: Learn by Simulation
 name: BrawStats
-version: 1.1.0
+version: 2.1.0
 jms: '1.0'
 authors:
   - Roger Watt
 maintainer: Roger Watt <rjw1@stir.ac.uk>
-date: '2023-21-09'
+date: '2025-06-25'
 type: R
 description: |-
+  BrawStats is designed to teach the basic principles of statistics.
+
+  It operates by simulation of the quantitative research process:
+    i.   hypothesis
+    ii.  design
+    iii. data collection & analysis
+  It has a graded set of demonstrations that take the user through basic
+  processes.
+
+  It also has a simulation control interface that allows the user to explore
+  many different aspects of data and statistical analysis.
+
   BrawStats functions:
     i.   data simulation
-    ii.  data analysis
-    iii. general linear modelling for effect sizes
+    ii.  simple model
+    iii. general linear models
+    iv.  path models
 analyses:
-  - title: BrawStats:Analyze Data
-    name: BrawAn
+  - title: BrawStats:Simulate Data
+    name: BrawSim
     ns: BrawStats
     menuGroup: BrawStats
-    menuTitle: BrawStats:Analyze Data
+    menuTitle: BrawStats:Simulate Data
     category: analyses
-  - name: BrawLM
+  - title: BrawStats:Simple Models
+    name: BrawAn
+    ns: BrawStats
+    category: analyses
+    menuGroup: BrawStats
+    menuTitle: BrawStats:Simple Models
+  - title: BrawStats:Linear Models
+    name: BrawLM
     ns: BrawStats
     menuGroup: BrawStats
     menuTitle: BrawStats:Linear Models
-    title: BrawStats:Linear Models
     category: analyses
-  - name: BrawSEM
+  - title: BrawStats:Path Models
+    name: BrawSEM
     ns: BrawStats
     menuGroup: BrawStats
     menuTitle: BrawStats:Path Models
-    title: BrawStats:Path Models
     category: analyses
 usesNative: true
 minApp: 1.0.8
