--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,18 @@
 exportPattern("^[[:alpha:]]+")
 import(jmvcore)
 import(BrawPackage)
+import(abind)
+import(car)
+import(clipr)
+import(ggplot2)
+import(ggtext)
+import(grDevices)
+import(grid)
+import(lme4)
+import(meta)
+import(mnormt)
+import(pracma)
+import(readxl)
+import(stringr)
+import(writexl)
+import(lavaan)
